🐛 Styling fix for longer info texts on smaller devices
Fixes #7

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -20,7 +20,9 @@
 }
 
 .field {
-  height: 24px;
   display: flex;
-  align-items: center;
+
+  svg {
+    margin-top: -2px;
+  }
 }
